completed ikirori organiser that work well

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,11 @@
       <item >Paid Ticket</item>
     </string-array>
 
+    <string-array name="frais">
+        <item>Transmettre les frais</item>
+        <item >Frais Inclus</item>
+    </string-array>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
