--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,8 @@
         <item>Transmettre les frais</item>
         <item >Frais Inclus</item>
     </string-array>
-
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="live_tab">Live</string>
+    <string name="past_tab">Past</string>
+    <string name="draft_tab">Draft</string>
 </resources>
